# 1.00.00 (62368) Mar 9, 2012
3/9/12 Concentration 1.00 release
3/8/12 fill more of the cuvette with solution (92% vs 85%)
3/8/12 Beers: change KMnO4 color chip to match first tab, RGB=[80,0,120]
3/8/12 try making top of cuvette look open
3/8/12 double width of cuvette stroke (1.5 to 3)
# 0.00.19 (62349) Mar 8, 2012
3/8/12 Beers: first dev version that uses experimental data to map wavelength to molar aborptivity
3/8/12 remove duplicate stroking of light beam
3/8/12 hook up experimental data to absorbance model
3/8/12 clean up concentration value view transform
3/8/12 add JC's experimental data to lookup tables for mapping wavelength to molar absorptivity
# 0.00.18 (62340) Mar 8, 2012
3/8/12 Concentration 1.00 release candidate
3/8/12 change "lambdaMax" label to "fixed" on wavelength radio button
3/8/12 format Color Scheme Editor output so that it can be directly pasted back into Java code
3/8/12 convert JC's spreadsheet to something that can be used by Java (CSV format, swap rows and columns)
3/7/12 add workaround for #3267, problem with wavelength slider
3/7/12 BeersLawSolution: doc, eliminate duplication of colors, convert colors from hex to RGB
3/7/12 eliminate duplication of saturated concentration values
3/7/12 reduce width of concentration text field
3/7/12 render ruler after Reset All button, so that Reset All button doesn't get obscured
3/7/12 move model-view location debugger to upper-right
3/7/12 simplify wavelength control, replace enum with boolean
3/7/12 when lambdaMax radio button is selected, set light wavelength to current solution's lambdaMax
3/7/12 Beers: rename "solid beam" to "beam" throughout, since there's only one representation now
3/7/12 Beers: delete "photon view" feature, representation can't handle the range [62302],[62303],[62311]
# 0.00.17 (62294) Mar 7, 2012
3/7/12 Concentration: new color scheme from JC
3/7/12 restore wavelength control