@@ -56,7 +56,7 @@ public class BeersLawModel implements Resettable {
 
         this.light = new Light( new ImmutableVector2D( 1.5, 2.2 ), false, 0.45, solution );
 
-        this.cuvette = new Cuvette( new ImmutableVector2D( light.location.getX() + 1.5, 1.25 ), 1.0, 2.75, new DoubleRange( 0.5, 2.0 ) );
+        this.cuvette = new Cuvette( new ImmutableVector2D( light.location.getX() + 1.5, 1.4 ), new DoubleRange( 0.5, 2.0, 1.0 ), 3 );
 
         //TODO compute drag bounds to match the stage size
         final int rulerWidth = 2; // cm
