@@ -1,3 +1,4 @@
+3/9/12 increase cuvette height to 3cm, move cuvette down an additional 0.15cm
 # 1.00.00 (62368) Mar 9, 2012
 3/9/12 Concentration 1.00 release
 3/8/12 fill more of the cuvette with solution (92% vs 85%)
